--- a/src/config-example.json
+++ b/src/config-example.json
@@ -119,6 +119,22 @@
   "imageHeight": 300,
 
   /**
+   * Whether or not the image is resizeable.
+   *
+   * @type Boolean
+   * @default true
+   */
+  "imageResizeable": true,
+
+  /**
+   * Whether or not the viewport is resizeable.
+   *
+   * @type Boolean
+   * @default true
+   */
+  "viewportResizeable": true,
+
+  /**
    * Image preload. The image you want to display when PaintWeb loads. This must 
    * be a reference to an HTML Image element.
    *
